# notes-app

./: .dockerignore  .env.docker  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
frontend/: .dockerignore
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  notes.ts
frontend/src/components/: Navbar.css  Navbar.tsx  NoteCard.css  NoteCard.tsx  NoteModal.css  NoteModal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Auth.css  Home.css  Home.tsx  Login.tsx  Register.tsx
src/: app.py
src/core/: auth_dependencies.py  config.py  dependencies.py
src/database/: session.py
src/models/: notes.py  user.py
src/repositories/: auth_repo.py  base_repo.py  notes_repo.py
src/routers/: auth_router.py  note_router.py
src/schemas/: auth_schema.py  note_schema.py
src/services/: auth_service.py  note_service.py
src/utils/: security.py
